Setup a bottom sheet fragment to select the options to search for. Saving results using DataStore.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
-
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -115,6 +115,6 @@ dependencies {
     // Jsoup
     implementation 'org.jsoup:jsoup:1.13.1'
 
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
-
-
