--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
     id 'com.google.secrets_gradle_plugin' version '0.4'
+    id 'androidx.navigation.safeargs' version '2.4.2' apply false
 }
