--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name=".ui.DetailsActivity"
             android:exported="false"
-            android:label="Detail"
+            android:label="Details"
             android:theme="@style/DetailsActivityStyle">
             <meta-data
                 android:name="android.app.lib_name"
